// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usingCrlf.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
        margin: 42px;
}
=====================================output=====================================
.foo {
  margin: 42px;
}

================================================================================
`;

exports[`usingCrlf.css 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
        margin: 42px;
}
=====================================output=====================================
.foo {/*CR*/  margin: 42px;/*CR*/}/*CR*/
================================================================================
`;

exports[`usingCrlf.css 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
        margin: 42px;
}
=====================================output=====================================
.foo {/*CR*/
  margin: 42px;/*CR*/
}/*CR*/

================================================================================
`;

exports[`usingCrlf.css 4`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
        margin: 42px;
}
=====================================output=====================================
.foo {
  margin: 42px;
}

================================================================================
`;

exports[`usingLf.css 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
        margin: 42px;
}
=====================================output=====================================
.foo {
  margin: 42px;
}

================================================================================
`;

exports[`usingLf.css 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
        margin: 42px;
}
=====================================output=====================================
.foo {/*CR*/  margin: 42px;/*CR*/}/*CR*/
================================================================================
`;

exports[`usingLf.css 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
        margin: 42px;
}
=====================================output=====================================
.foo {/*CR*/
  margin: 42px;/*CR*/
}/*CR*/

================================================================================
`;

exports[`usingLf.css 4`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
.foo {
        margin: 42px;
}
=====================================output=====================================
.foo {
  margin: 42px;
}

================================================================================
`;
